# petalinux_opencv

optee_mjpg/: Makefile
optee_mjpg/mjpg/: Android.mk  CMakeLists.txt
optee_mjpg/mjpg/host/: Makefile
optee_opencv/: CMakeLists.txt  Makefile
optee_opencv/opencv/: Android.mk  CMakeLists.txt
optee_opencv/opencv/host/: Makefile  main.cpp
optee_opencv/opencv/ta/: Android.mk  Makefile
optee_opencv/opencv/ta/include/: hello_world_ta.h
petalinux-optee-zcu102/.petalinux/: metadata
petalinux-optee-zcu102/project-spec/configs/: config
petalinux-optee-zcu102/project-spec/meta-user/conf/: petalinuxbsp.conf
petalinux-optee-zcu102/project-spec/meta-user/recipes-kernel/linux/: linux-xlnx_%.bbappend
petalinux-optee-zcu102/project-spec/meta-user/recipes-security/optee/: optee-mjpg.inc  optee-mjpg_3.14.0.bb  optee-opencv.inc  optee-opencv_3.14.0.bb
